# stm32f7x-hal

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: flash.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  rcc.rs  serial.rs  spi.rs  timer.rs
