[package]
name = "f7"
authors = ["David Karwowski <karwowski.david@gmail.com>"]
description = "Board support crate for the STM32F429I Discovery Board"
keywords = ["no-std", "arm", "cortex-m", "stm32"]
repository = "https://github.com/dkarwowski/f7"
documentation = "https://docs.rs/f7"
license = "MIT"
version = "0.2.0"

[dependencies.stm32f7x]
git = "https://github.com/musitdev/stm32f7x"
branch = "0.2.0-New-IO"


[dependencies]
cortex-m = "0.4.0"
embedded-hal = "0.1.0"
nb = "0.1.0"

[dependencies.cast]
version = "0.2.2"
default-features = false

[features]
rt = ["stm32f7x/rt"]
