[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "musitdev <philippe.delrieu@free.fr>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F7xx family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f7x-hal"
repository = "https://github.com/musitdev/stm32f7x-hal"
version = "0.2.0"

[dependencies.stm32f7x]
git = "https://github.com/musitdev/stm32f7x"
branch = "0.2.0-New-IO"

[dependencies]
cortex-m = "0.4.0"
embedded-hal = "0.1.0"
nb = "0.1.0"

[dependencies.cast]
version = "0.2.2"
default-features = false

[features]
rt = ["stm32f7x/rt"]
